--- a/trunk/ressourcen/plugins/webinterface/index.tmpl
+++ b/trunk/ressourcen/plugins/webinterface/index.tmpl
@@ -1,104 +1,123 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html >
+<html>
 <head>
-<title>JDownloader</title>
-<meta name="GENERATOR" content="Quanta Plus">
+<title>JDownloader - WebInterface v<tmpl_var webinterface_version></title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="jd.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="menuscript01.js"></script>
+<meta http-equiv="Content-Style-Type" content="text/css">
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<link href="jd.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="filelist.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
-
-
-
-
+<noscript><meta http-equiv="refresh" content="0;URL=nojs.tmpl"></noscript>
 </head>
+
 <body>
-<FORM action="/index.tmpl" name="jd" method="POST" target="_parent">
-<div style="width:800px;margin: 0 auto;border:1px solid;padding:5px 5px 5px 5px;;background-color:#1189ee">
-<h2 style="text-align:center;color:#F7F7F7">JDownloader WebInterface(Version <tmpl_var webinterface_version>)</h2>
-<h2 style="text-align:center;color:#F7F7F7">Status-Page</h2>
-<hr>
-<ul id="containerul">
-  <tmpl_loop pakete>
-    <li style="margin:0pt 0pt 0pt 0pt"> <br>
-      <table style="width:100%">
-        <tr>
-	<TD style="width:2%"><INPUT type="checkbox" name="package_all_downloads" value="<tmpl_var package_id escape>" onclick="samecheckall(document.jd.package_single_download,this)"></TD>
-          <TD style="width:25%"><A href="all_info.tmpl?all_info=<tmpl_var package_id escape>" name="PackageInfo" onclick="return popup(this,600,200)"><tmpl_var download_name></A></TD>
-          <TD style="width:25%"><tmpl_var download_hoster></TD>
+<div id="main">
+	<div id="header">
+	<h2 class="title">WebInterface<br>(Version <tmpl_var webinterface_version>)</h2>
+	</div>
 
-	<TD  style="color:#000000;background-color:<tmpl_var download_status_color escape>">
-		<div id="ladebalken"><p style="width: <tmpl_var download_status_percent>%;">
-		<span><tmpl_var download_status></span></p></div></TD>
-        </tr>
-      </table>
-      <ul >
-        <table style="width:100%">
-	
-          <tmpl_loop downloads>
-	<tr>            
-	<TD style="width:2%"><INPUT type="checkbox" name="package_single_download" value="<tmpl_var package_id> <tmpl_var download_id escape>" onclick="areallsamechecked(this,document.jd.package_single_download,document.jd.package_all_downloads)"></TD>	
-              <TD style="width:25%"><A href="single_info.tmpl?single_info=<tmpl_var package_id>+<tmpl_var download_id escape>" name="LinkInfo" onclick="return popup(this,600,200)"><tmpl_var download_name></A></TD>
-              <TD style="width:25%"><tmpl_var download_hoster></TD>
-              <TD  style="color:#000000;background-color:<tmpl_var download_status_color escape>">
-		<div id="ladebalken"><p style="width: <tmpl_var download_status_percent>%;">
-		<span><tmpl_var download_status></span></p></div>
-		</TD>
-            </tr>
-          </tmpl_loop>
-        </table>
-      </ul>
-    </li>
-  </tmpl_loop>
-</ul>
-<script type="text/javascript">
-initiate();                // This must be placed immediately after the menu in order to format it properly.
-</script>
-<hr>
+	<div id="content">
+		<div id="tabs">
+			<ul id="tabmenu">
+				<li class="active"><a class="active" href="/" name="Status Page" target="_self">Status Page</a></li>
+				<li><A href="/passwd.tmpl" name="Edit Passwords" target="_self">Edit Password-List</A></li>
+				<li><A href="/link_adder.tmpl" name="Link Adder" target="_self">Add Links</A></li>
+			</ul>
+		</div>
 
-  <DIV style="text-align:center">
-<INPUT type="button" name="select" value="Select All" onclick="checkall(document.jd.package_all_downloads,document.jd.package_single_download)">
-<INPUT type="button" name="select" value="UnSelect All" onclick="uncheckall(document.jd.package_all_downloads,document.jd.package_single_download)">
+		<div id="tabcontent">
 
-<SELECT name="selected_dowhat_index">
-<option>activate</option>
-<option>deactivate</option>
-<option>reset</option>
-<option>abort</option>
-<option>remove</option>
-</SELECT>
-    <INPUT type="submit" name="do" value="Submit">
-    <A href="/index.tmpl" name="Refresh" target="_self">REFRESH</A>	
-    <INPUT type="submit" name="do" value="Close JD" checked onclick="validateandsubmit('Close JD?',this,'/bye.tmpl')">
-    <INPUT type="submit" name="do" value="Restart JD"  checked onclick="validateandsubmit('Restart JD?',this,'/restart.tmpl')"> 
-  </DIV>
-  <DIV >
-  <table style="width:100%">
-    <TR>
-      <TD ><INPUT type="submit" name="do" value="Reconnect NOW">
-        <br>
-        Auto Reconnect<INPUT type="checkbox" 
-        <tmpl_var config_autoreconnect >
-        name="autoreconnect" value="on"></TD>
-      <TD ><INPUT type="submit" name="do" value="<tmpl_var config_startstopbutton escape>"></TD>
-      <TD >Max. Downloads
-        <INPUT type="text" name="maxdls" value="<tmpl_var config_max_downloads escape>" maxlength="4" size="4"></TD>
-      <TD >SpeedLimit
-        <INPUT type="text" name="speed" value="<tmpl_var config_max_speed escape>" maxlength="4" size="4">
-        kb/s (Current: <tmpl_var config_current_speed> kb/s)</TD>
-    </TR>
-  </table>
-  </DIV>
-</FORM>
+			<FORM action="/index.tmpl" name="jd" id="jdForm" method="POST" target="_parent">
 
-<FORM name="add" action="/link_adder.tmpl" target="_parent" method="POST">
-<DIV style="text-align:center">
-<textarea name="addlinks" cols="90" rows="3"  onfocus="clean(this)">Paste your Links here (Container URLs, Link URLs, SourceCode from Pages to parse)</textarea><br>
-<INPUT type="submit" name="do" value="Add">
-<hr>
-<A href="/passwd.tmpl" name="Edit Passwords" target="_self">Edit Passwords</A>
-<A href="/link_adder.tmpl" name="Link Adder" target="_self">Link Adder</A>
-</DIV>
-</FORM>
+				<div id="toolbar">
+					<div id="toolbarright">
+						<img src="img/shutdown.png" width="32" height="32" alt="Close JD" title="Close JD" onclick="validateandsubmit('Close JD?','jdForm','/bye.tmpl', 'close')">
+						<img src="img/reboot.png" width="32" height="32" alt="Restart JD" title="Restart JD" onclick="validateandsubmit('Restart JD?','jdForm','/restart.tmpl', 'restart')">
+					</div>
+					<div id="toolbarleft">
+						<A href="/index.tmpl" name="Refresh" target="_self"><img src="img/refresh.png" width="30" height="30" alt="Refresh" title="Refresh" border="0"></A>
+						<img src="img/<tmpl_var config_startstopbutton escape>.png" width="32" height="32" alt="Start/Stop Downloads" title="Start/Stop Downloads" onclick="submitForm('jdForm','/index.tmpl','do', '<tmpl_var config_startstopbutton escape>')">
+						<img src="img/reconnect_do.png" width="32" height="32" alt="Reconnect" title="Reconnect" onclick="submitForm('jdForm','/index.tmpl','do','reconnect')">
+						<img src="img/reconnect<tmpl_var config_autoreconnect >.png" width="32" height="32" alt="Activate/Deactivate Auto-Reconnect" title="Activate/Deactivate Auto-Reconnect" onclick="switchAutoReconnect('jdForm','/index.tmpl','<tmpl_var config_autoreconnect >')">
+						<div class="hide"><input type="checkbox" name="autoreconnect" id="autoreconnect" value="on" <tmpl_var config_autoreconnect >></div>
+					</div>
+				</div>
+
+				<table class="tabledownload" id="packageContainer">
+					<tr>
+						<td style="width:2%;" class="tabletitle">
+							<input type="checkbox" name="select" onclick="if (this.checked==true) {checkall(document.jd.package_all_downloads,document.jd.package_single_download); } else {uncheckall(document.jd.package_all_downloads,document.jd.package_single_download);}">
+						</td>
+						<td class="tabletitle">File</td>
+						<td style="width:20%;" class="tabletitle">Hoster</td>
+						<td style="width:300px;" class="tabletitle">Progress</td>
+					</tr>
+
+
+				<tmpl_loop pakete>
+					<tr class="package<tmpl_var download_status>">
+						<td><INPUT type="checkbox" name="package_all_downloads" value="<tmpl_var package_id escape>" onclick="samecheckall(document.jd.package_single_download,this)"></td>
+						<td><A href="all_info.tmpl?all_info=<tmpl_var package_id escape>" name="PackageInfo" onclick="return popup(this,600,200)"><tmpl_var download_name></A></td>
+						<td><tmpl_var download_hoster></td>
+						<td class="ladebalkentd">
+							<div class="ladebalken">
+								<p class="<tmpl_var download_status>" style="width: <tmpl_var download_status_percent>%;">
+									<span><tmpl_var download_status_text></span>
+								</p>
+							</div>
+						</td>
+					</tr>
+
+					<tmpl_loop downloads>
+						<tr class="download<tmpl_var download_status>" banane="sdf">
+							<td><INPUT type="checkbox" name="package_single_download" value="<tmpl_var package_id> <tmpl_var download_id escape>" onclick="areallsamechecked(this,document.jd.package_single_download,document.jd.package_all_downloads)"></TD>
+							<td><A href="single_info.tmpl?single_info=<tmpl_var package_id>+<tmpl_var download_id escape>" name="LinkInfo" onclick="return popup(this,600,200)" style="padding-left: 20px;"><tmpl_var download_name></A></TD>
+							<td><tmpl_var download_hoster></TD>
+							<td class="ladebalkentd">
+								<div class="ladebalken"><p class="<tmpl_var download_status>" style="width: <tmpl_var download_status_percent>%;">
+								<span><tmpl_var download_status_text></span></p></div>
+							</TD>
+						</tr>
+					</tmpl_loop>
+
+				</tmpl_loop>
+				</table>
+
+				<script type="text/javascript">
+					// This must be placed immediately after the filelists (packages/downloads).
+					initiate("statuslist");
+					// startPageReload(10000);
+				</script>
+
+				<div class="rightDLOptions">
+					Max. Downloads <INPUT type="text" name="maxdls" value="<tmpl_var config_max_downloads escape>" maxlength="4" size="4"> , SpeedLimit <INPUT type="text" name="speed" value="<tmpl_var config_max_speed escape>" maxlength="4" size="4">	KB/s (Current: <tmpl_var config_current_speed> KB/s)</TD>
+					<a href="#" class="button" onclick="submitForm('jdForm','/index.tmpl','do','submit')">Go!</a>
+				</div>
+
+				<DIV class="leftDLOptions">
+					<SELECT name="selected_dowhat_index">
+					<option>activate</option>
+					<option>deactivate</option>
+					<option>reset</option>
+					<option>abort</option>
+					<option>remove</option>
+					</SELECT>
+					<a href="#" class="button" onclick="submitForm('jdForm','/index.tmpl','do','submit')">Go!</a>
+				</DIV>
+				<br>
+			</FORM>
+
+			<FORM name="add" id="addForm" action="/link_adder.tmpl" target="_parent" method="POST">
+				<DIV class="linkAddBox">
+					<textarea name="addlinks" cols="90" rows="3" onfocus="clean(this)" style="width:100%;">Paste your Links here (Container URLs, Link URLs, SourceCode from Pages to parse)</textarea><br>
+					<br>
+					<a href="#" onclick="submitForm('addForm','link_adder.tmpl','do','Add')" class="addButton">Add</a>
+				</DIV>
+			</FORM>
+		</div>
+	</div>
+</div>
+<div id="footer">Addon by jiaz, Design (HTML, CSS, JS) by Bo0nZ</div>
 </body>
 </html>
