--- a/trunk/ressourcen/plugins/webinterface/passwd.tmpl
+++ b/trunk/ressourcen/plugins/webinterface/passwd.tmpl
@@ -1,32 +1,53 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html >
+<html>
 <head>
-<title>JDownloader</title>
-<meta name="GENERATOR" content="Quanta Plus">
+<title>JDownloader - WebInterface v<tmpl_var webinterface_version></title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="jd.css" rel="stylesheet" type="text/css" />
-<script type="text/javascript" src="menuscript01.js"></script>
+<meta http-equiv="Content-Style-Type" content="text/css">
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<link href="jd.css" rel="stylesheet" type="text/css">
+<script type="text/javascript" src="filelist.js"></script>
 <script type="text/javascript" src="scripts.js"></script>
-
-
-
-
+<noscript><meta http-equiv="refresh" content="0;URL=nojs.tmpl"></noscript>
 </head>
 
-<div style="width:800px;margin: 0 auto;border:1px solid;padding:5px 5px 5px 5px;;background-color:#1189ee">
-<h2 style="text-align:center;color:#F7F7F7">JDownloader WebInterface(Version <tmpl_var webinterface_version>)</h2>
-<h2 style="text-align:center;color:#F7F7F7">Password-Editor</h2>
-<hr>
+<body>
+<div id="main">
 
-<FORM name="add" action="/passwd.tmpl" target="_parent" method="POST">
-<DIV style="text-align:center">
-<textarea name="password_list" cols="90" rows="20" ><tmpl_var password_list></textarea><br>
-<INPUT type="submit" name="passwd" value="Save">
-<hr>
-<A href="/index.tmpl" name="Status Page" target="_self">Status Page</A>
-<A href="/link_adder.tmpl" name="Link Adder" target="_self">Link Adder</A>
-</DIV>
-</FORM>
+	<div id="header">
+	<h2 class="title">WebInterface<br>(Version <tmpl_var webinterface_version>)</h2>
+	</div>
 
+	<div id="content">
+		<div id="tabs">
+			<ul id="tabmenu">
+				<li class="active"><a href="/" name="Status Page" target="_self">Status Page</a></li>
+				<li><A class="active" href="/passwd.tmpl" name="Edit Passwords" target="_self">Edit Password-List</A></li>
+				<li><A href="/link_adder.tmpl" name="Link Adder" target="_self">Add Links</A></li>
+			</ul>
+		</div>
+
+		<div id="tabcontent">
+
+			<FORM name="jdForm" id="jdForm" action="/passwd.tmpl" target="_parent" method="POST">
+
+				<div id="toolbar">
+					<div id="toolbarright">
+						<img src="img/shutdown.png" width="32" height="32" alt="Close JD" title="Close JD" onclick="validateandsubmit('Close JD?','jdForm','/bye.tmpl', 'close')">
+						<img src="img/reboot.png" width="32" height="32" alt="Restart JD" title="Restart JD" onclick="validateandsubmit('Restart JD?','jdForm','/restart.tmpl', 'restart')">
+					</div>
+					<div id="toolbarleft">
+						<img src="img/save.png" width="32" height="32" alt="Save" title="Save" onclick="submitForm('jdForm','/passwd.tmpl', 'passwd', 'Save')">
+					</div>
+				</div>
+
+				<DIV>
+					<textarea name="password_list" cols="90" rows="20" style="width:100%;"><tmpl_var password_list></textarea><br>
+				</DIV>
+			</FORM>
+		</div>
+	</div>
+</div>
+<div id="footer">Addon by jiaz, Design (HTML, CSS, JS) by Bo0nZ</div>
 </body>
 </html>
