--- a/trunk/ressourcen/plugins/webinterface/restart.tmpl
+++ b/trunk/ressourcen/plugins/webinterface/restart.tmpl
@@ -1,21 +1,21 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-<html >
+<html>
 <head>
-<title>JDownloader</title>
-<meta name="GENERATOR" content="Quanta Plus">
+<title>JDownloader - WebInterface v<tmpl_var webinterface_version></title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link href="jd.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="Content-Style-Type" content="text/css">
+<meta http-equiv="Content-Script-Type" content="text/javascript">
+<link href="jd.css" rel="stylesheet" type="text/css">
 <script type="text/javascript" src="scripts.js"></script>
-
 </head>
+
 <body>
 
-<h2 style="text-align:center;color:#000000">
-<A  href="/index.tmpl" name="Wait 10seks or Click here" target="_self"> Restarting JD...(Wait 10 secounds or click here)</A></h2>
-	
+<h2 class="status"><A  href="/index.tmpl" name="Wait 10seks or Click here" target="_self"> Restarting JD...(Wait 10 seconds or click here)</A></h2>
+
 <script language="javascript">
-<!-- 
-setTimeout("forwardto('/index.tmpl')", 10000); 
+<!--
+setTimeout("forwardto('/index.tmpl')", 10000);
 // -->
 </script>
 
